--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
             background-color: var(--bg-color);
             font-family: 'Space Mono', monospace;
             color: var(--main-text);
-            height: 100vh;
-            width: 100vw;
+            width: 100%;
             overflow-x: hidden;
         }
 
