--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://hoverstate.design/" />
     <meta property="og:title" content="Hoverstate.design | Zero-to-One Product & MVP Design Studio" />
     <meta property="og:description" content="Hoverstate partners with startups at the zero-to-one stage, designing products, identity, and investor materials that accelerate growth and funding." />
-    <meta property="og:image" content="https://hoverstate.design/og-image.png" />
+    <meta property="og:image" content="https://hoverstate.design/og-image.svg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Hoverstate" />
@@ -26,7 +26,7 @@
     <meta name="twitter:url" content="https://hoverstate.design/" />
     <meta name="twitter:title" content="Hoverstate.design | Zero-to-One Product & MVP Design Studio" />
     <meta name="twitter:description" content="Hoverstate partners with startups at the zero-to-one stage, designing products, identity, and investor materials that accelerate growth and funding." />
-    <meta name="twitter:image" content="https://hoverstate.design/og-image.png" />
+    <meta name="twitter:image" content="https://hoverstate.design/og-image.svg" />
     <meta name="twitter:creator" content="@hoverstate" />
     
     <!-- Canonical URL for SEO -->
@@ -208,7 +208,7 @@
       "@type": "Organization",
       "name": "Hoverstate",
       "url": "https://hoverstate.design",
-      "logo": "https://hoverstate.design/logo.png",
+      "logo": "https://hoverstate.design/logo.svg",
       "description": "Zero-to-One Product & MVP Design Studio",
       "sameAs": [
         "https://twitter.com/hoverstate",
@@ -255,7 +255,7 @@
       "name": "Hoverstate Design Studio",
       "url": "https://hoverstate.design",
       "description": "Design and development services for startups: product design, brand identity, MVP development, pitch decks, and web design.",
-      "image": "https://hoverstate.design/og-image.png",
+      "image": "https://hoverstate.design/og-image.svg",
       "telephone": "",
       "email": "ishmam@hoverstate.design",
       "priceRange": "$$",
